php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35723 xmlrpc_introspection.c fails compile per C99 std
Submitted: 2005-12-18 05:00 UTC Modified: 2005-12-19 00:00 UTC
From: richton at nbcs dot rutgers dot edu Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5CVS-2005-12-18 (snap) OS: *
Private report: No CVE-ID: None
 [2005-12-18 05:00 UTC] richton at nbcs dot rutgers dot edu
Description:
------------
ext/xmlrpc/libxmlrpc/xmlrpc_introspection.c has a couple 
inline functions:

inline XMLRPC_VALUE find_named_value(XMLRPC_VALUE list, const 
char* needle) {
inline void describe_method(XMLRPC_SERVER server, XMLRPC_VALUE 
vector, const char* method) {

They are referenced elsewhere in the file, but there is no 
external definition. See C99 specification section 6.7.4. 

An extra keyword here would go a long way...

Reproduce code:
---------------
make

Expected result:
----------------
successful compile

Actual result:
--------------
Undefined                       first referenced
symbol                             in file
find_named_value                    ext/xmlrpclibxmlrpc/.libs/
xmlrpc_introspection.o
describe_method                     ext/xmlrpclibxmlrpc/.libs/
xmlrpc_introspection.o

ld: fatal: Symbol referencing errors. No output written to
sapi/cli/php


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-12-18 11:32 UTC] tony2001@php.net
What compiler and linker are you using?
 [2005-12-18 17:56 UTC] richton at nbcs dot rutgers dot edu
Sun Studio. It's free (as in beer) now, you can download it 
from sun.com. Linker is the standard Solaris 9 linker, latest 
patch 112963-25. However this shouldn't be a compiler issue as 
it's written into the standard. (admittedly there's a lot of 
non-C99 compliant gcc out there, but...)
 [2005-12-19 00:00 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC