- Fixed bug #35723 (xmlrpc_introspection.c fails compile per C99 std)